[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Options.gd" type="Script" id=1]

[node name="Options" type="CanvasLayer"]
layer = 2

[node name="Options1" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Options1"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="Label" type="Label" parent="Options1/ColorRect"]
margin_left = 244.0
margin_top = 76.0
margin_right = 406.0
margin_bottom = 90.0

[node name="Label2" type="Label" parent="Options1/ColorRect"]
margin_left = 244.0
margin_top = 97.0
margin_right = 406.0
margin_bottom = 111.0

[node name="Label3" type="Label" parent="Options1/ColorRect"]
margin_left = 244.0
margin_top = 118.0
margin_right = 406.0
margin_bottom = 132.0

[node name="VBoxContainer" type="VBoxContainer" parent="Options1/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -39.0
margin_right = 81.0
margin_bottom = 39.0

[node name="Button" type="Button" parent="Options1/ColorRect/VBoxContainer"]
margin_right = 162.0
margin_bottom = 20.0
text = "Back"

[node name="Music" type="HSlider" parent="Options1/ColorRect/VBoxContainer"]
margin_top = 24.0
margin_right = 162.0
margin_bottom = 40.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Sounds" type="HSlider" parent="Options1/ColorRect/VBoxContainer"]
margin_top = 44.0
margin_right = 162.0
margin_bottom = 60.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Ambient" type="HSlider" parent="Options1/ColorRect/VBoxContainer"]
margin_top = 64.0
margin_right = 162.0
margin_bottom = 80.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="Options1/ColorRect"]
margin_left = 12.0
margin_top = 79.0
margin_right = 77.0
margin_bottom = 129.0

[node name="Label" type="Label" parent="Options1/ColorRect/VBoxContainer2"]
margin_right = 65.0
margin_bottom = 14.0
text = "Music"
align = 2

[node name="Label2" type="Label" parent="Options1/ColorRect/VBoxContainer2"]
margin_top = 18.0
margin_right = 65.0
margin_bottom = 32.0
text = "Sounds"
align = 2

[node name="Label3" type="Label" parent="Options1/ColorRect/VBoxContainer2"]
margin_top = 36.0
margin_right = 65.0
margin_bottom = 50.0
text = "Ambience"
align = 2

[connection signal="pressed" from="Options1/ColorRect/VBoxContainer/Button" to="Options1" method="_on_Button_pressed"]
[connection signal="value_changed" from="Options1/ColorRect/VBoxContainer/Music" to="Options1" method="_on_Music_value_changed"]
[connection signal="value_changed" from="Options1/ColorRect/VBoxContainer/Sounds" to="Options1" method="_on_Sounds_value_changed"]
[connection signal="value_changed" from="Options1/ColorRect/VBoxContainer/Ambient" to="Options1" method="_on_Ambient_value_changed"]
